added check on compartments in epimodel

--- a/test.ipynb
+++ b/test.ipynb
@@ -48,11 +48,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# EpiModel Object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Epydemix.transition.Transition at 0x7fb666a42550>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Epydemix.epimodel import EpiModel\n",
+    "\n",
+    "# create model \n",
+    "model = EpiModel(compartments=[\"S\", \"I\"])\n",
+    "\n",
+    "# add compartments\n",
+    "model.add_compartments(\"R\")\n",
+    "\n",
+    "# add transitions \n",
+    "model.add_transition(source=\"S\", target=\"I\", rate=0.2, rate_name=\"beta\", agent=\"I\")\n",
+    "model.add_transition(source=\"I\", target=\"R\", rate=0.1, rate_name=\"mu\")\n",
+    "\n",
+    "model.transitions[\"I\"][0]"
+   ]
   },
   {
    "cell_type": "code",
