added simulation module

--- a/test.ipynb
+++ b/test.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,6 @@
     "population = Population(name=\"Indonesia\")\n",
     "\n",
     "# add contact matrices\n",
-    "population.add_contact_matrix(np.load(\"./basins/Indonesia/contacts-matrix/contacts_matrix_all.npz\")[\"arr_0\"], \n",
-    "                              layer_name=\"all\")\n",
     "population.add_contact_matrix(np.load(\"./basins/Indonesia/contacts-matrix/contacts_matrix_work.npz\")[\"arr_0\"], \n",
     "                              layer_name=\"work\")\n",
     "population.add_contact_matrix(np.load(\"./basins/Indonesia/contacts-matrix/contacts_matrix_home.npz\")[\"arr_0\"], \n",
@@ -44,7 +42,8 @@
     "                              layer_name=\"school\")\n",
     "\n",
     "# add population in different age groups\n",
-    "population.add_population(pd.read_csv(\"./basins/Indonesia/demographic/Nk.csv\")[\"value\"].values)"
+    "population.add_population(Nk=pd.read_csv(\"./basins/Indonesia/demographic/Nk.csv\")[\"value\"].values, \n",
+    "                          Nk_names=pd.read_csv(\"./basins/Indonesia/demographic/Nk.csv\")[\"group\"].values)"
    ]
   },
   {
@@ -56,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Epydemix.transition.Transition at 0x7fb666a42e80>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Epydemix.epimodel import EpiModel\n",
     "\n",
@@ -80,11 +68,93 @@
     "model.add_compartments(\"R\")\n",
     "\n",
     "# add transitions \n",
-    "model.add_transition(source=\"S\", target=\"I\", rate=0.2, rate_name=\"beta\", agent=\"I\")\n",
+    "model.add_transition(source=\"S\", target=\"I\", rate=0.04, rate_name=\"beta\", agent=\"I\")\n",
     "model.add_transition(source=\"I\", target=\"R\", rate=0.1, rate_name=\"mu\")\n",
     "\n",
-    "model.transitions[\"I\"][0]"
+    "# add interventions\n",
+    "model.add_intervention(layer_name=\"work\", start_date=\"2020-01-01\", end_date=\"2020-05-01\", reduction_factor=0.3)\n",
+    "#model.add_intervention(layer_name=\"school\", start_date=\"2020-01-01\", end_date=\"2020-02-01\", new_matrix=population.contact_matrices[\"community\"])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compartments, df_quantiles = model.simulate(population=population, \n",
+    "                              start_date=\"2019-12-01\", \n",
+    "                              end_date=\"2020-06-01\", \n",
+    "                              S=population.Nk - np.ones(len(population.Nk)),\n",
+    "                              I=np.ones(len(population.Nk)),\n",
+    "                              R=np.zeros(len(population.Nk)),\n",
+    "                              steps=100)\n",
+    "compartments.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(df_quantiles.loc[(df_quantiles.compartment == \"I\") & \\\n",
+    "                 (df_quantiles[\"quantile\"] == 0.5) & \\\n",
+    "                 (df_quantiles.demographic_group == \"total\")].value.values)\n",
+    "\n",
+    "plt.plot(df_quantiles.loc[(df_quantiles.compartment == \"I\") & \\\n",
+    "                 (df_quantiles[\"quantile\"] == 0.05) & \\\n",
+    "                 (df_quantiles.demographic_group == \"total\")].value.values)\n",
+    "\n",
+    "plt.plot(df_quantiles.loc[(df_quantiles.compartment == \"I\") & \\\n",
+    "                 (df_quantiles[\"quantile\"] == 0.95) & \\\n",
+    "                 (df_quantiles.demographic_group == \"total\")].value.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit model.simulate(population=population, start_date=\"2019-12-01\",  end_date=\"2020-06-01\",  S=population.Nk - np.ones(len(population.Nk)),  I=np.ones(len(population.Nk)), R=np.zeros(len(population.Nk)),steps=100, Nsim=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date=\"2019-12-01\"\n",
+    "end_date=\"2020-06-01\"\n",
+    "steps = 100\n",
+    "start_date, end_date = pd.to_datetime(start_date), pd.to_datetime(end_date)\n",
+    "simulation_dates = pd.date_range(start=start_date, end=end_date, periods=steps).tolist()\n",
+    "quantiles=[0.025, 0.05, 0.25, 0.5, 0.75, 0.95, 0.975]\n",
+    "Nsim =100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
