calibration_top_perc

--- a/test.ipynb
+++ b/test.ipynb
@@ -183,11 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len({})"
+    "errors = [1,2,4,5,5,12,4,4,5]\n",
+    "np.argwhere(np.array(errors) < 4).ravel()"
    ]
   },
   {
