--- a/examples/population.ipynb
+++ b/examples/population.ipynb
@@ -22,13 +22,13 @@
    "source": [
     "# Population Object\n",
     "\n",
-    "The ```population``` object represents the population on which the epidemic is simulated. It has the following key attributes:\n",
+    "The ```Population``` object represents the population on which the epidemic is simulated. It has the following key attributes:\n",
     "\n",
     "- ```contact_matrices```: this a dictionary of contact matrices. Each element $i, j$ of the contact matrix represents the rate of contact between two demographic groups in a given context (e.g., schools, workplaces). The context of the contacts are defined in the key of the dictionary.\n",
     "\n",
     "- ```Nk```: this is an array representing the number of individuals in each demographic group (e.g., age groups). The name of demographic groups (e.g.,```0-9, 10-19, ...```) is collected in the attribute ```Nk_names```\n",
     "\n",
-    "We will now create a first ```population``` object named ```Indonesia```:\n"
+    "We will now create a first ```Population``` object named ```Indonesia```:\n"
    ]
   },
   {
@@ -53,13 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population.add_contact_matrix(np.load(\"../basins/Indonesia/contacts-matrix/contacts_matrix_work.npz\")[\"arr_0\"], \n",
+    "population.add_contact_matrix(np.load(\"../epydemix_data/Indonesia/contacts-matrix/contacts_matrix_work.npz\")[\"arr_0\"], \n",
     "                              layer_name=\"work\")\n",
-    "population.add_contact_matrix(np.load(\"../basins/Indonesia/contacts-matrix/contacts_matrix_home.npz\")[\"arr_0\"], \n",
+    "population.add_contact_matrix(np.load(\"../epydemix_data/Indonesia/contacts-matrix/contacts_matrix_home.npz\")[\"arr_0\"], \n",
     "                              layer_name=\"home\")\n",
-    "population.add_contact_matrix(np.load(\"../basins/Indonesia/contacts-matrix/contacts_matrix_community.npz\")[\"arr_0\"], \n",
+    "population.add_contact_matrix(np.load(\"../epydemix_data/Indonesia/contacts-matrix/contacts_matrix_community.npz\")[\"arr_0\"], \n",
     "                              layer_name=\"community\")\n",
-    "population.add_contact_matrix(np.load(\"../basins/Indonesia/contacts-matrix/contacts_matrix_school.npz\")[\"arr_0\"], \n",
+    "population.add_contact_matrix(np.load(\"../epydemix_data/Indonesia/contacts-matrix/contacts_matrix_school.npz\")[\"arr_0\"], \n",
     "                              layer_name=\"school\")"
    ]
   },
@@ -76,17 +76,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population.add_population(Nk=pd.read_csv(\"../basins/Indonesia/demographic/Nk.csv\")[\"value\"].values, \n",
-    "                          Nk_names=pd.read_csv(\"../basins/Indonesia/demographic/Nk.csv\")[\"group\"].values)"
+    "population.add_population(Nk=pd.read_csv(\"../epydemix_data/Indonesia/demographic/Nk.csv\")[\"value\"].values, \n",
+    "                          Nk_names=pd.read_csv(\"../epydemix_data/Indonesia/demographic/Nk.csv\")[\"group\"].values)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have now created a ```population``` object and initialized its key attributes. \n",
+    "We have now created a ```Population``` object and initialized its key attributes. \n",
     "\n",
-    "Alternatively, downloading the ```epydemix``` data package we can strealime the process and automatically import contact matrices and demographic information for a given country:"
+    "Alternatively, after downloading the ```epydemix``` data package we can strealime the process and automatically import contact matrices and demographic information for a given country. \n",
+    "\n",
+    "The list of geographies supported and the data format is provided at XXX"
    ]
   },
   {
@@ -95,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO"
+    "population = Population() \n",
+    "population.load_population(population_name=\"Indonesia\", path_to_data=\"../epydemix_data/\")"
    ]
   },
   {
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
