--- a/examples/simulation.ipynb
+++ b/examples/simulation.ipynb
@@ -83,9 +83,9 @@
     "    - rate_name: the expression of the rate of the transition\n",
     "    - agent: the name of the compartment which catalyzes the transition (in case of spontaneous transitions it is set to None)\n",
     "\n",
-    "**Important Note**: some parameter names, such as ```beta``` and ```gamma``` cannot be used. This is because ```rate_name``` are evaluated as composite expressions using ```sympy```, and some names may be in conflict with this python package. This is done to allow for transitions that have composite expressions for the rate (more details below).\n",
+    "<div class=\"alert alert-block alert-warning\"><b>Important Note: </b> some parameter names, such as 'beta' and 'gamma' cannot be used. This is because rate_name are evaluated as composite expressions using sympy and some names may be in conflict with this python package. This is done to allow for transitions that have composite expressions for the rate (more details below). </div>\n",
     "\n",
-    "MORE DETAILS ON THE SIMULATION (STOCHASTIC, CHAIN BINOMIALS)\n",
+    "TODO: MORE DETAILS ON THE SIMULATION (STOCHASTIC, CHAIN BINOMIALS)\n",
     "\n",
     "We are now ready to run our first simulation. To do so, we will need to specify the population object, start and end date of the simulation, the initial conditions for each compartment, the number of steps for each simulation, and thet total number of stochastic simulations (default is 100): \n"
    ]
@@ -141,6 +141,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With ```EpiModel```, we can also model the impact of interventions aimed at reducing or changing the pattern of contacts. To do so, we need to define the set of interventions before calling the ```simulate``` function.\n",
+    "\n",
+    "Interventions can be defined using the ```add_intervention``` method, which takes the following parameters:\n",
+    "\n",
+    "- ```layer_name```: The name of the contacts layer to which the intervention is applied (e.g., 'work', 'school').\n",
+    "- ```start_date```: The start date of the intervention.\n",
+    "- ```end_date```: The end date of the intervention.\n",
+    "- ```reduction_factor```: A float determining the reduction factor of contacts in the specified contact layer. For example, ```reduction_factor=0.3``` implies a 70% reduction in contacts.\n",
+    "- ```new_matrix```: Instead of applying a reduction factor to all contacts in the contact layer, you can pass a new contact matrix to be used during the intervention period.\n",
+    "\n",
+    "In the following example, we add two interventions, one to the work contact layer, from 2020-01-01 to 2020-05-01 implying an overall 70% reduction in contacts, and one to the school contact layer from 2019-01-01 to 2020-06-01 implying a 55% reduction in contacts in this layer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -148,12 +165,33 @@
    "source": [
     "# add interventions by using a multplying factor\n",
     "model.add_intervention(layer_name=\"work\", start_date=\"2020-01-01\", end_date=\"2020-05-01\", reduction_factor=0.3)\n",
-    "model.add_intervention(layer_name=\"school\", start_date=\"2019-01-01\", end_date=\"2020-06-01\", reduction_factor=0.45)\n",
-    "\n",
+    "model.add_intervention(layer_name=\"school\", start_date=\"2019-01-01\", end_date=\"2020-06-01\", reduction_factor=0.45)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also add a third intervention where instead of using a multplying factor, we consider a new matrix from 2020-01-01 to 2020-03-01 for the community layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# add interventions by changing the contact matrix\n",
     "comm_matrix = population.contact_matrices[\"community\"].copy()\n",
     "comm_matrix[6:] = 0\n",
     "model.add_intervention(layer_name=\"community\", start_date=\"2020-01-01\", end_date=\"2020-03-01\", new_matrix=comm_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we simulate the model with interventions added and we plot results:"
    ]
   },
   {
@@ -193,6 +231,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also plot the number of infected over time in specific age groups, for example 0 to 4 and 5 to 9:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -217,6 +262,24 @@
    "metadata": {},
    "source": [
     "# More Complex Compartmentalization Structures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The EpiModel object allows to create complex comparmental models. For example, we consider here a SEIR-like model with two different virus strains:\n",
+    "\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"./img/covid19_comp_model.svg\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "Strain 2 has the same latent and infectious period, but a different transmission rate. In particular: \n",
+    "\n",
+    "$$\\beta_2 = \\beta_1 * \\psi$$\n",
+    "\n",
+    "Where $\\psi$ indicates the increased transmissibility of Strain 2. In EpiModel, you can use symbolic expressions for rates, which is particularly useful for composite expressions like this."
    ]
   },
   {
