--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@
     - returns all the runs 
     - select top_perc runs a posteriori
 - parallelization also on more simple calibrations
+- run projections sampling from the posterior
 
 ## Plotting 
 - plot spectral radius or something related to the interventions
