--- a/TODO
+++ b/TODO
@@ -5,6 +5,11 @@
 - rates that are arrays (different for each demographic, such as IFR)
 - add ValueError for protected sympy rate names
 - parallelization
+- add_interventions: would it make sense to distinguish between functions for new_matrix and reduction_factor?
+- add_interventions, add the possibility to modulate only the beta, or possibly any parameter
+- simulate(): take compute_quantiles out
+- think about how to "merge" simulate and stochastic_function, so that we always call simulate and not stochastic_function, also in the calibration. A possiblity can be to add a "prepare_simulation function that is called before every run. Simulate can also go out from EpiModel
+
 
 ## Calibration 
 - single calibration function with switch?
@@ -18,6 +23,8 @@
     - select top_perc runs a posteriori
 - parallelization also on more simple calibrations
 - run projections sampling from the posterior
+- add to CalibrationResults the performance of selected trajectories (distribution and average error metric)
+
 
 ## Plotting 
 - divide plotting function in submodules, some are only for calibration, other to Population and simulation
@@ -29,3 +36,11 @@
 - complete data package based on these decisions
 - submodules divisions
 
+## Population
+- add possibility to do the import directly from the init
+- make the population object an attribute of EpiModel, with default values
+
+
+## Transitions
+- change the name of attribute rate_name, this is rather an expression
+- test transitions mediated by more agents (in the future we can also speed up these cases by factoring out the matrix product)
