population is now in epimodel attributes

--- a/examples/population.ipynb
+++ b/examples/population.ipynb
@@ -13,7 +13,8 @@
     "# Epydemix import\n",
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from epydemix.population import Population"
+    "from epydemix.population import Population\n",
+    "from epydemix.utils import load_population"
    ]
   },
   {
@@ -97,8 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population = Population() \n",
-    "population.load_population(population_name=\"Indonesia\", path_to_data=\"../epydemix_data/\")"
+    "population = load_population(population_name=\"Indonesia\", path_to_data=\"../epydemix_data/Indonesia/\")"
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
