--- a/examples/calibration.ipynb
+++ b/examples/calibration.ipynb
@@ -281,8 +281,8 @@
    "source": [
     "def custom_initial_conditions(epimodel, i0_perc): \n",
     "    initial_infected = int(np.sum(epimodel.population.Nk) * i0_perc)\n",
-    "    infected_by_age = np.random.multinomial(initial_infected, model.population.Nk / model.population.Nk.sum())\n",
-    "    return {\"S\": model.population.Nk - infected_by_age, \n",
+    "    infected_by_age = np.random.multinomial(initial_infected, epimodel.population.Nk / epimodel.population.Nk.sum())\n",
+    "    return {\"S\": epimodel.population.Nk - infected_by_age, \n",
     "            \"I\": infected_by_age}\n",
     "\n",
     "def simulate_wrapper(parameters): \n",
