--- a/tutorials/simulation.ipynb
+++ b/tutorials/simulation.ipynb
@@ -13,8 +13,8 @@
     "# Epydemix import\n",
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from epydemix.epimodel import EpiModel\n",
-    "from epydemix.plotting import plot_quantiles, plot_spectral_radius"
+    "from epydemix.model.epimodel import EpiModel\n",
+    "from epydemix.visualization.plotting import plot_quantiles, plot_spectral_radius"
    ]
   },
   {
@@ -480,6 +480,27 @@
    ],
    "source": [
     "plot_quantiles(results, columns=[\"I1_total\", \"I2_total\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.13.2'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import seaborn\n",
+    "seaborn.__version__   "
    ]
   },
   {
