--- a/tutorials/1_define_models.ipynb
+++ b/tutorials/1_define_models.ipynb
@@ -15,6 +15,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from epydemix import EpiModel"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
