--- a/tutorials/1_define_models.ipynb
+++ b/tutorials/1_define_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,26 +10,18 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from epydemix.model.epimodel import EpiModel\n",
-    "from epydemix.visualization.plotting import plot_quantiles, plot_spectral_radius"
+    "from epydemix.visualization import plot_quantiles, plot_spectral_radius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from epydemix import EpiModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "print(sys.executable)"
+    "from epydemix import EpiModel\n",
+    "\n",
+    "model = EpiModel(population_name=\"United_States\", use_default_population=False)"
    ]
   },
   {
