epydemix_data readme

--- a/tutorials/1_define_models.ipynb
+++ b/tutorials/1_define_models.ipynb
@@ -118,6 +118,31 @@
     "- real populations\n",
     "- custom populations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from epydemix import EpiModel\n",
+    "\n",
+    "# Create a new model\n",
+    "model = EpiModel()\n",
+    "\n",
+    "# Set demographic and contacts patterns of United States\n",
+    "model.set_custom_population(\n",
+    "    population_name=\"United_States\",\n",
+    "    population_data_path=\"../epydemix_data/\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
