started unit testing

--- a/tutorials/simulation.ipynb
+++ b/tutorials/simulation.ipynb
@@ -480,6 +480,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from epydemix import EpiModel\n",
+    "model = EpiModel()\n",
+    "\n",
+    "model.add_compartments([\"Susceptible\", \"Infected\", \"Recovered\"])\n",
+    "model.add_transition(source=\"Susceptible\", target=\"Infected\", rate=0.3, agent=\"Infected\")\n",
+    "model.add_transition(source=\"Infected\", target=\"Recovered\", rate=0.1)\n",
+    "\n",
+    "# Run simulations with specified time frame and initial conditions\n",
+    "results = model.run_simulations(\n",
+    "    start_date=\"2019-12-01\", \n",
+    "    end_date=\"2020-04-01\", \n",
+    "    Susceptible=99990, \n",
+    "    Infected=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
