--- a/tutorials/4_Model_Calibration_part1.ipynb
+++ b/tutorials/4_Model_Calibration_part1.ipynb
@@ -28,7 +28,7 @@
     "from epydemix.utils import compute_simulation_dates, compute_quantiles\n",
     "\n",
     "import seaborn as sns   \n",
-    "colors = sns.color_palette(\"Accent\")"
+    "colors = sns.color_palette(\"Dark2\")"
    ]
   },
   {
