--- a/tutorials/5_Model_Calibration_part2.ipynb
+++ b/tutorials/5_Model_Calibration_part2.ipynb
@@ -11,6 +11,62 @@
     "# projections\n",
     "# calibration with external models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "from typing import List, Optional, Union, Any\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "colors = sns.color_palette(\"Blues\", n_colors=6)\n",
+    "fig, ax = plt.subplots(dpi=300)\n",
+    "for generation in [0,1,2,3,4,5]: \n",
+    "    plot_posterior_distribution(results_abc_smc, generation=generation, parameter=\"transmission_rate\", ax=ax, kind=\"kde\", prior_range=False, color=colors[generation], label=\"Generation %d\" % generation)"
+   ]
   }
  ],
  "metadata": {
