--- a/tutorials/6_Advanced_Modeling_Features.ipynb
+++ b/tutorials/6_Advanced_Modeling_Features.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "# time and age-varying parameters\n",
-    "# dt and resampling"
+    "# dt and resampling\n",
+    "# initial conditions"
    ]
   }
  ],
