calibration part 2 wip

--- a/tutorials/4_Model_Calibration_part1.ipynb
+++ b/tutorials/4_Model_Calibration_part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calibration of Epidemic Models to Data with Epydemix\n",
+    "# Calibration of Epidemic Models to Data with Epydemix - Part 1\n",
     "\n",
     "In this tutorial, we will explore how to calibrate epidemic models to data using the ***epydemix*** package.\n",
     "\n",
@@ -20,7 +20,6 @@
     "from scipy import stats \n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import time\n",
     "import matplotlib.pyplot as plt \n",
     "from epydemix.model import EpiModel, simulate\n",
     "from epydemix.visualization import plot_distance_distribution, plot_selected_quantiles, plot_posterior_distribution, plot_posterior_distribution_2d\n",
@@ -40,9 +39,9 @@
     "***Epydemix*** currently supports 3 calibration methods: \n",
     "\n",
     "\n",
-    "1. ***ABC-SMC Calibration***: this is the most sophisticated supported method which implements the Approximate Bayesian Computation Sequential Monte Carlo (ABC-SMC) algorithm. In general, this method allows to achieve more accurate results, but may be more computationally expensive.\n",
+    "1. ***ABC-SMC Calibration***: this is the most sophisticated supported method which implements the Approximate Bayesian Computation Sequential Monte Carlo (ABC-SMC) algorithm. In general, this method allows to achieve more accurate results, but may be more computationally expensive. The method implemented in Epydemix is the one described in [Toni et al, 2009](https://pubmed.ncbi.nlm.nih.gov/19205079)\n",
     "\n",
-    "2. ***ABC Rejection***: this method implements the simple Approximate Bayesian Computation Rejection algorithm\n",
+    "2. ***ABC Rejection***: this method implements the simple Approximate Bayesian Computation Rejection algorithm, for more details see [Minter et al, 2019](https://www.sciencedirect.com/science/article/pii/S175543651930026X)\n",
     "\n",
     "3. ***Top X% Simulations***: this method implements a variation of the ABC rejection algorithm, where, instead of defining a tolerance and accepting/rejecting based on this, a total budget of simulations is run and the final set of accepted particles is the top X%, regardless of any tolerance threshold. This guarantees results in an allocated amount of time, but it is less accurate and robust than the other two methods. For this reason, we suggest to use this method mostly for exploratory purposes or for recurrent tasks that needs a fixed elapsing time.\n",
     "\n",
@@ -463,13 +462,6 @@
     "plot_distance_distribution(results_top_perc, ax=ax, kind=\"kde\", color=colors[2], label=\"Top X%\", xlabel=\"RMSE\")\n",
     "ax.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
