--- a/tutorials/6_Advanced_Modeling_Features.ipynb
+++ b/tutorials/6_Advanced_Modeling_Features.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "# time and age-varying parameters\n",
+    "# rate as expressions\n",
     "# dt and resampling\n",
     "# initial conditions"
    ]
