updated % in agents default

--- a/tutorials/5_Model_Calibration_part2.ipynb
+++ b/tutorials/5_Model_Calibration_part2.ipynb
@@ -284,9 +284,16 @@
     "\n",
     "# run projections\n",
     "projections_trajectories, posterior_samples = run_projections(simulate_wrapper, \n",
-    "                                                         results_abc_smc, \n",
-    "                                                         parameters   ### Note here we use the parameters for the full time frame\n",
-    "                                                        )"
+    "                                                              results_abc_smc, \n",
+    "                                                              parameters   ### Note here we use the parameters for the full time frame\n",
+    "                                                              )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We finally plot the results, in terms of median and 90% confidence intervals of number of infected over time during both the calibration and projection phase:"
    ]
   },
   {
