--- a/tutorials/6_Advanced_Modeling_Features.ipynb
+++ b/tutorials/6_Advanced_Modeling_Features.ipynb
@@ -9,7 +9,8 @@
     "# time and age-varying parameters\n",
     "# rate as expressions\n",
     "# dt and resampling\n",
-    "# initial conditions"
+    "# initial conditions\n",
+    "# new transition kinds (behavioral)"
    ]
   }
  ],
