--- a/tutorials/5_Model_Calibration_part2.ipynb
+++ b/tutorials/5_Model_Calibration_part2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
-    "from epydemix.model import EpiModel, simulate\n",
+    "from epydemix import load_predefined_model, simulate\n",
     "from epydemix.visualization import plot_posterior_distribution\n",
     "from epydemix.calibration import ABCSampler\n",
     "from epydemix.utils import compute_simulation_dates\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "data_projection = data.iloc[-40:]\n",
     "\n",
     "# model \n",
-    "model = EpiModel(predefined_model='SIR')\n",
+    "model = load_predefined_model(\"SIR\")\n",
     "model.import_epydemix_population(population_name=\"Indonesia\")\n",
     "\n",
     "# initial conditions (we assume fully S population except for 0.05% infected individual across age groups)\n",
