--- a/tutorials/data/massachusetts_data/preprocess_data.ipynb
+++ b/tutorials/data/massachusetts_data/preprocess_data.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Epi data\n",
+    "### COVID-19 deaths data\n",
     "\n",
     "https://usafacts.org/visualizations/coronavirus-covid-19-spread-map/state/new-york/\n"
    ]
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fae98d02d30>]"
+       "[<matplotlib.lines.Line2D at 0x7fbfd54fce50>]"
       ]
      },
      "execution_count": 2,
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "data_NY[[\"Day\", \"daily_deaths\"]].rename(columns={\"Day\": \"date\", \n",
-    "                                                 \"daily_deaths\": \"data\"}).to_csv(\"./NY_deaths.csv\", index=False)"
+    "                                                 \"daily_deaths\": \"data\"}).to_csv(\"./MA_deaths.csv\", index=False)"
    ]
   },
   {
@@ -122,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "google.to_csv(\"./NY_google.csv\", index=False)"
+    "google.to_csv(\"./MA_google.csv\", index=False)"
    ]
   },
   {
